@@ -1,3 +1,8 @@
+2010-05-28  Jan Nijtmans  <nijtmans@users.sf.net>
+
+	* generic/tclInt.h:  [tcl-Patches-3008541] order of TIP #348 fields
+	in Interp structure
+
 2010-05-28  Donal K. Fellows  <dkf@users.sf.net>
 
 	* generic/tclCompCmdsSZ.c (IssueTryFinallyInstructions): [3007374]:
